plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'coursemaker'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'

	// JWT
	ext {
		JJWT_VERSION = "0.12.3"
	}

	implementation "io.jsonwebtoken:jjwt-api:${JJWT_VERSION}"
	runtimeOnly "io.jsonwebtoken:jjwt-gson:${JJWT_VERSION}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${JJWT_VERSION}"
	implementation 'javax.xml.bind:jaxb-api:2.3.1'


	// S3
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.152'

	//이메일인증
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'

	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	//redis를 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//임시
	implementation 'org.modelmapper:modelmapper:3.1.0'//객체 간의 필드 매핑을 자동으로 처리
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.2.2' //thymeleaf
	implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity6', version: '3.1.2.RELEASE'

	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.0'
	// MacOS에서 DNS 해상도 문제
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.86.Final:osx-aarch_64'

	/*프로메테우스*/
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
}

tasks.named('test') {
	useJUnitPlatform()
}
